# GrpcServer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Src/Pqxx/: CMakeLists.txt  CMakeSettings.json  main.cpp
Src/Server/: CMakeLists.txt
src/Client/: CmakeLists.txt
